--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
-  .venv/
-  *cache*
-  .vscode/
-  .idea/
+*cache*
+.vscode/
+*.egg-info
+__pycache__/
+dist/
+*.pyc
+.venv/
+.coverage
+coverage.xml
+.pytest_cache/
+.idea/
+  
