--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,5 @@ dist/
 coverage.xml
 .pytest_cache/
 .idea/
-hello/__pycache__/__init__.cpython-311.pyc
-hello/scripts/__pycache__/say_hello.cpython-311.pyc
+hello/__pycache__/
+hello/scripts/
